tests/invalid/main_guard_not_compare/main.py
def run_case() -> None:
    print("x")


if __name__:
    run_case()
